--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   dio: ^5.4.1
-  google_fonts: ^6.2.0
+  google_fonts: 6.1.0
   get: ^4.6.6
   font_awesome_flutter: ^10.7.0
   flutter:
