--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_fonts: 6.1.0
   get: ^4.6.6
   font_awesome_flutter: ^10.7.0
+  intl_phone_field: ^3.2.0
   flutter:
     sdk: flutter
 
