--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   get: ^4.6.6
   font_awesome_flutter: ^10.7.0
   intl_phone_field: ^3.2.0
+  iconly: ^1.0.1
+  firebase_core:
+  firebase_auth:
+  cloud_firestore:
   flutter:
     sdk: flutter
 
