--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,41 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         mavenCentral()
+//        maven {
+//            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+//            authentication {
+//                basic(BasicAuthentication)
+//            }
+//            credentials {
+//                // Do not change the username below
+//                username = 'mapbox'
+//                password = project.hasProperty('sk.eyJ1Ijoia3JvbmFocyIsImEiOiJjbHdxZHRobWgwMG83MmpyMW1lbmFwdXAyIn0.jq7bpyT43Cv7xUcvV1jKMg') ? project.property('sk.eyJ1Ijoia3JvbmFocyIsImEiOiJjbHdxZHRobWgwMG83MmpyMW1lbmFwdXAyIn0.jq7bpyT43Cv7xUcvV1jKMg') : ''
+//            }
+//        }
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'com.mapbox.maps:mapbox-sdk:11.4.0'
     }
 }
 allprojects {
     repositories {
         google()
         mavenCentral()
+//        maven {
+//            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+//            authentication {
+//                basic(BasicAuthentication)
+//            }
+//            credentials {
+//                // Do not change the username below
+//                username = 'mapbox'
+//                password = project.hasProperty('sk.eyJ1Ijoia3JvbmFocyIsImEiOiJjbHdxZHRobWgwMG83MmpyMW1lbmFwdXAyIn0.jq7bpyT43Cv7xUcvV1jKMg') ? project.property('sk.eyJ1Ijoia3JvbmFocyIsImEiOiJjbHdxZHRobWgwMG83MmpyMW1lbmFwdXAyIn0.jq7bpyT43Cv7xUcvV1jKMg') : ''
+//            }
+//        }
     }
 }
 
