--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   intl_phone_field: ^3.2.0
   iconly: ^1.0.1
+  flutter_otp_text_field: ^1.1.3+2
+  app_settings: ^5.1.1
+  flutter_dotenv: ^5.1.0
+  geolocator:
+  firebase_storage:
   firebase_core:
   firebase_auth:
   cloud_firestore:
@@ -70,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
