--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   get: ^4.6.6
   font_awesome_flutter: ^10.7.0
   intl_phone_field: ^3.2.0
+  image_picker:
+  shimmer:
   iconly: ^1.0.1
   flutter_otp_text_field: ^1.1.3+2
   app_settings: ^5.1.1
